--- a/Assignment_3-checkpoint.ipynb
+++ b/Assignment_3-checkpoint.ipynb
@@ -17,11 +17,11 @@
     "#Question 1\n",
     "from __future__ import division\n",
     "from fractions import Fraction\n",
-    "def event_probality(AB,B,A):\n",
+    "def Event_Probability(AB,B,A):\n",
     "    BA=\"%.2f\"%((AB*B)/A)\n",
     "    print(\"P(B|A)\",Fraction(BA))\n",
     "    \n",
-    "event_probality(2/36,6/36,11/36)"
+    "Event_Probability(2/36,6/36,11/36)"
    ]
   },
   {
